bk_ida/gccida/c0/copy_rtx_and_substitute
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2372:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // [rsp+50h] [rbp-170h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2373:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // [rsp+54h] [rbp-16Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2374:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // [rsp+58h] [rbp-168h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2382:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // [rsp+90h] [rbp-130h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2383:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // [rsp+94h] [rbp-12Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2385:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode const_mode_0; // [rsp+ACh] [rbp-114h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2386:4: error: expected ';' after expression
rtx equiv_loc; // [rsp+B8h] [rbp-108h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2386:5: error: use of undeclared identifier 'equiv_loc'
rtx equiv_loc; // [rsp+B8h] [rbp-108h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2387:4: error: expected ';' after expression
rtx copy_0; // [rsp+C8h] [rbp-F8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2387:5: error: use of undeclared identifier 'copy_0'
rtx copy_0; // [rsp+C8h] [rbp-F8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2389:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode const_mode; // [rsp+10Ch] [rbp-B4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2405:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+180h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2406:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+184h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2409:4: error: expected ';' after expression
rtx temp; // [rsp+190h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2409:5: error: use of undeclared identifier 'temp'
rtx temp; // [rsp+190h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2410:4: error: expected ';' after expression
rtx tempa; // [rsp+190h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2410:5: error: use of undeclared identifier 'tempa'
rtx tempa; // [rsp+190h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2411:4: error: expected ';' after expression
rtx tempb; // [rsp+190h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/integrate.c:2411:5: error: use of undeclared identifier 'tempb'
rtx tempb; // [rsp+190h] [rbp-30h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_rtx_and_substitute/src/obj/integrate.o] Error 1
